--- a/fixacao/index.html
+++ b/fixacao/index.html
@@ -11,9 +11,9 @@
 <body>
   <p id="paragrafo">Olá!</p>
   <label for="texto">Texto:</label>
-  <input id="texto" name="texto" type="text" />
+  <input id="texto" name="texto" type="text" onkeydown="apertarTecla()" />
   <br/>
-  <button onclick=""></button>
+  <button onclick="apertarBotao()">OK</button>
 </body>
 
 </html>
